--- a/restaurants/templates/create.html
+++ b/restaurants/templates/create.html
@@ -5,6 +5,10 @@
         <title>Create</title>
     </head>
     <body>
-        
+        <form action="{% url 'restaurant_create' %" method="POST">
+        	{% csrf_token %}
+        	{{ my_form.as_p }}
+        	<input type="submit" value="PRESS ME!">
+        </form>
     </body>
 </html>
